[package]
name = "reddark-remix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.10"
clap = { version = "4.3.3", features = ["derive"] }
futures-util = "0.3.28"
governor = "0.5.1"
nonzero_ext = "0.3.0"
redis = { version = "0.23.0", features = ["tokio-rustls-comp"] }
reqwest = { version = "0.11.18", features = ["rustls-tls-webpki-roots", "json"], default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
socketioxide = "0.2.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
