[package]
name = "reddark-remix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
arti-client = { version = "0.9.2", features = ["tokio", "native-tls", "accel-openssl", "onion-service-client"] }
arti-hyper = "0.9.2"
async-trait = "0.1.72"
axum = "0.6.10"
axum-prometheus = "0.3.3"
axum-template = { version = "0.18.0", features = ["tera"] }
cached = "0.44.0"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.3", features = ["derive"] }
futures-util = "0.3.28"
governor = "0.5.1"
hyper = { version = "0.14.27", features = ["full"] }
itertools = "0.11.0"
nonzero_ext = "0.3.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
reqwest = { version = "0.11.18", features = ["native-tls", "json"], default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.25.0", features = ["derive"] }
tera = "1.19.0"
tls-api = "0.9.0"
tls-api-openssl = "0.9.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tor-rtcompat = "0.9.2"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.0"
